--- a/style.css
+++ b/style.css
@@ -70,6 +70,34 @@ p{
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 5%;
+    width: 100%;
+    height: 100%;
+}
+
+.subbasicinfo{
+    background-color: white;
+    width: 60%;
+}
+
+.basicinfovidcontainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.basicinfovidsubcontainer{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2%;
+    flex-wrap: wrap;
+}
+
+.basicinfovid{
+    width: 40%;
+    height: 44%;
 }
 
 button{
