--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ p{
 
 .subbasicinfo{
     background-color: white;
-    width: 60%;
+    width: 70%;
+    height:100%;
 }
 
 .basicinfovidcontainer{
