--- a/style.css
+++ b/style.css
@@ -244,3 +244,35 @@ button::after{
     justify-content:center;
     padding-left: 20px;
 }
+
+.bg-modal-robocco {
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    display:none;
+}
+
+.modal-content {
+    width:1200px;
+    height:700px;
+    background-color: white;
+    border-radius:4px;
+    text-align:center;
+    padding:20px;
+    position:relative;
+}
+
+.closepop {
+    position:absolute;
+    top: 0;
+    right:14px;
+    font-size:49px;
+    font-weight:40px;
+    transform: rotate(45deg);
+    cursor:pointer;
+}
