--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ button::after{
 
 .bg-modal-robocco {
     width:100%;
-    height:100%;
+    height: 100vh;
     background-color: rgba(0,0,0,0.7);
     position: fixed;
     top: 0;
@@ -258,13 +258,14 @@ button::after{
 }
 
 .modal-content {
-    width:1200px;
-    height:700px;
+    width:80%;
+    height:85%;
     background-color: white;
     border-radius:4px;
     text-align:center;
     padding:20px;
     position:relative;
+    border-radius: 4vh;
 }
 
 .closepop {
