--- a/style.css
+++ b/style.css
@@ -320,3 +320,35 @@ button::after{
     width: 60%;
     height: 50%;
 }
+
+.socialbar{
+    position: fixed;
+    top:70%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    z-index: 100;
+}
+.socialbar a{
+    display:block;
+    text-align:center;
+    padding:16px;
+    transition: all 0.3s ease;
+    color:white;
+    font-size:20px;
+}
+/*Hovering functionality*/
+.socialbar a:hover {
+    background-color:white;
+    color:rgb(89, 214, 255);
+}
+
+.twitter{
+    background:#55ACEE;
+    color:white;
+}
+
+.youtube{
+    background:#BB0000;
+    color:white;
+}
