--- a/style.css
+++ b/style.css
@@ -332,10 +332,10 @@ button::after{
 .socialbar a{
     display:block;
     text-align:center;
-    padding:16px;
     transition: all 0.3s ease;
     color:white;
     font-size:20px;
+    height: 30%;
 }
 /*Hovering functionality*/
 .socialbar a:hover {
@@ -346,9 +346,13 @@ button::after{
 .twitter{
     background:#55ACEE;
     color:white;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .youtube{
     background:#BB0000;
     color:white;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
