--- a/style.css
+++ b/style.css
@@ -195,9 +195,8 @@ button::after{
 
 .talent_pic{
     display:flex;
-    flex-wrap:wrap;
-    margin: 80px;
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 .talent_pic2{
@@ -220,6 +219,9 @@ button::after{
 .about{
     padding:8px;
     background-color:#95baff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .abouth1{
@@ -264,6 +266,42 @@ button::after{
     display:none;
 }
 
+.bg-modal-tokinosora {
+    width:100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    display:none;
+}
+
+.bg-modal-sakuramiko {
+    width:100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    display:none;
+}
+
+.bg-modal-suisei {
+    width:100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    display:none;
+}
+
 .modal-content {
     width:80%;
     height:85%;
@@ -294,7 +332,37 @@ button::after{
     flex-wrap: wrap;
 }
 
-.closepop {
+.closepop-robocco {
+    position:absolute;
+    top: 0;
+    right:14px;
+    font-size:49px;
+    font-weight:40px;
+    transform: rotate(45deg);
+    cursor:pointer;
+}
+
+.closepop-suisei {
+    position:absolute;
+    top: 0;
+    right:14px;
+    font-size:49px;
+    font-weight:40px;
+    transform: rotate(45deg);
+    cursor:pointer;
+}
+
+.closepop-tokinosora {
+    position:absolute;
+    top: 0;
+    right:14px;
+    font-size:49px;
+    font-weight:40px;
+    transform: rotate(45deg);
+    cursor:pointer;
+}
+
+.closepop-sakuramiko {
     position:absolute;
     top: 0;
     right:14px;
