--- a/style.css
+++ b/style.css
@@ -379,6 +379,18 @@ button::after{
     display:none;
 }
 
+.bg-modal-azki {
+    width:100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    display:none;
+}
+
 .modal-content {
     width:80%;
     height:85%;
@@ -509,6 +521,16 @@ button::after{
     cursor:pointer;
 }
 
+.closepop-azki {
+    position:absolute;
+    top: 0;
+    right:14px;
+    font-size:49px;
+    font-weight:40px;
+    transform: rotate(45deg);
+    cursor:pointer;
+}
+
 .inforow{
     width: 90%;
     display: flex;
@@ -522,7 +544,7 @@ button::after{
 }
 
 .infotopright{
-    width: 56.5%;
+    width: 60%;
     height: 50%;
 }
 
