--- a/style.css
+++ b/style.css
@@ -1733,3 +1733,28 @@ button::after{
     padding-top: 5%;
     padding-bottom: 5%;
 }
+
+.web-loader{
+    position:fixed;
+    z-index:99;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.web-loader.hidden{
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100%{
+        opacity:0%;
+        visibility:hidden;
+    }
+}
